--- a/fm/src/app/employee-tree/employee-tree.component.scss
+++ b/fm/src/app/employee-tree/employee-tree.component.scss
@@ -7,7 +7,7 @@
 .employee-tree-container {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   margin: 0;
   padding: 0;
 }
