--- a/fm/src/app/leave-summary/apply-leave/apply-leave.component.html
+++ b/fm/src/app/leave-summary/apply-leave/apply-leave.component.html
@@ -18,23 +18,40 @@
           <mat-error *ngIf="leaveForm.get('leaveType')?.hasError('required')">Leave Type is required</mat-error>
         </mat-form-field>
 
-        <!-- Start Date -->
+
         <mat-form-field appearance="fill" class="full-width">
           <mat-label>Start Date</mat-label>
-          <input matInput [matDatepicker]="startDatePicker" formControlName="startDate" required>
+          <input
+            matInput
+            [matDatepicker]="startDatePicker"
+            [min]="today"
+            formControlName="startDate"
+            required
+            (dateChange)="onStartDateChange($event)"
+          />
           <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #startDatePicker></mat-datepicker>
           <mat-error *ngIf="startDateError">{{ startDateError }}</mat-error>
         </mat-form-field>
-
+        
         <!-- End Date -->
         <mat-form-field appearance="fill" class="full-width">
           <mat-label>End Date</mat-label>
-          <input matInput [matDatepicker]="endDatePicker" formControlName="endDate" required>
+          <input
+            matInput
+            [matDatepicker]="endDatePicker"
+            [min]="minEndDate"
+            formControlName="endDate"
+            required
+            [disabled]="dateForm?.get('startDate')?.value === null" 
+          />
           <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
           <mat-datepicker #endDatePicker></mat-datepicker>
           <mat-error *ngIf="endDateError">{{ endDateError }}</mat-error>
         </mat-form-field>
+        
+        
+
 
         <!-- Team Email ID -->
         <mat-form-field appearance="fill" class="full-width">
@@ -43,14 +60,15 @@
           <mat-error *ngIf="leaveForm.get('teamEmail')?.hasError('required')">Team Email ID is required</mat-error>
         </mat-form-field>
 
-        <!-- Reason for Leave -->
+        
         <mat-form-field appearance="fill" class="full-width">
           <mat-label>Reason for Leave</mat-label>
           <textarea matInput formControlName="reason" required></textarea>
           <mat-error *ngIf="leaveForm.get('reason')?.hasError('required')">Reason for Leave is required</mat-error>
         </mat-form-field>
 
-        <!-- Buttons -->
+       
+
         <div class="button-group">
           <button mat-raised-button color="primary" type="submit">Submit</button>
           <button mat-raised-button color="warn" type="button" (click)="cancel()">Cancel</button>
