--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -74,6 +74,7 @@
         </div>
       </div>
     </div>
+    <a *ngIf="authService.getUserRole()" (click)="logout()">Logout</a>
   </div>
   <div class="main-content" style="width: 100%">
     <router-outlet></router-outlet>
