Ui Integrated Changes

--- a/fm/src/app/leave-summary/apply-leave/apply-leave.component.html
+++ b/fm/src/app/leave-summary/apply-leave/apply-leave.component.html
@@ -70,7 +70,7 @@
        
 
         <div class="button-group">
-          <button mat-raised-button color="primary" type="submit">Submit</button>
+          <button mat-raised-button color="primary" type="submit" (click)="onSubmit()">Submit</button>
           <button mat-raised-button color="warn" type="button" (click)="cancel()">Cancel</button>
         </div>
       </form>
