--- a/fm/src/app/announcements/announcements.component.html
+++ b/fm/src/app/announcements/announcements.component.html
@@ -84,11 +84,11 @@
             <small class="error-text">Location is required.</small>
           </div>
         </div>
-        <div>
+        <!-- <div>
           <label><input formControlName="disableComments" type="checkbox"> Disable Comments</label>
           <label><input formControlName="pinAnnouncement" type="checkbox"> Pin Announcement</label>
           <label><input formControlName="notifyAll" type="checkbox"> Notify All Employees</label>
-        </div>
+        </div> -->
         <div class="modal-buttons">
           <button type="submit" class="publish-button">Publish</button>
           <button type="button" class="cancel-button" (click)="closeAnnouncementModal()">Cancel</button>
