--- a/fm/src/app/my-task/my-task.component.html
+++ b/fm/src/app/my-task/my-task.component.html
@@ -87,7 +87,7 @@
           <button class="icon-button edit-button" (click)="editTask(task)">
             <i class="fas fa-edit"></i>
           </button>
-          <button class="icon-button delete-button" (click)="deleteTask(task.id)">
+          <button class="icon-button delete-button" (click)="deleteTask(task.taskId)">
             <i class="fas fa-trash-alt"></i>
           </button>
         </td>
